@@ -686,7 +686,6 @@ END;
 
 	function pageTitle() {
 		global $wgOut;
-
 		$s = '<h1 class="pagetitle">' . htmlspecialchars( $wgOut->getPageTitle() ) . '</h1>';
 		return $s;
 	}
