@@ -265,6 +265,7 @@ $wgLanguageNamesEn =& $wgLanguageNames;
 	MAG_LC                   => array( 0,    'LC:'                    ),
 	MAG_UC                   => array( 0,    'UC:'                    ),
 	MAG_RAW                  => array( 0,    'RAW:'                   ),
+	MAG_DISPLAYTITLE         => array( 1,    'DISPLAYTITLE'           ),
 );
 
 if (!$wgCachedMessageArrays) {
